<resources>
    <!--General Labels-->
    <string name="app_name">Stay Local</string>
    <string name="submit_button_label">Submit</string>
    <string name="cancel_label">Cancel</string>

    <!--Login & Signup Fragments-->
    <string name="enter_full_name_label">Enter Full Name</string>
    <string name="enter_email_label">Enter Email</string>
    <string name="enter_password_label">Enter Password</string>
    <string name="create_account_label">Create New Account</string>
    <string name="business_account_label">Business Account:</string>

    <!--Profile Fragment-->
    <string name="notifications_label">Notifications</string>
    <string name="logout_label">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Business & Event Listings-->
    <string name="business_listings">Business Listings</string>
    <string name="event_listings">Event Listings</string>

</resources>